--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- Начало навбара -->
     <header class="header">
         <section class="flex">
             <a href="#" class="logo">
@@ -30,6 +31,8 @@
             </div>
         </section>
     </header>
+    <!-- Конец навбара -->
+    <!-- Начало первой секции -->
     <section class="home" id="home">
         <div class="flex">
             <div class="content">
@@ -50,6 +53,8 @@
             </div>
         </div>
     </section>
+    <!-- Конец первой секции -->
+    <!-- Начало второй секции -->
     <div class="skills-container">
         <div class="heading"><span>my skills</span>
             <h3>experiences i have</h3>
@@ -87,6 +92,8 @@
             </div>
         </div>
     </div>
+    <!-- Конец второй секции -->
+    <!-- Начало третьей секции -->
     <section class="about" id="about">
         <div class="row">
             <div class="image">
@@ -114,6 +121,8 @@
             </div>
         </div>
     </section>
+    <!-- Конец третьей секции -->
+    <!-- Начало четвертой секции -->
     <section class="services" id="services">
         <div class="heading"><span>my services</span>
             <h3>what i provide</h3>
@@ -169,6 +178,8 @@
             </div>
         </div>
     </section>
+    <!-- Конец четвертой секции -->
+    <!-- Начало пятой секции -->
     <section class="projects" id="projects">
         <div class="heading"><span>my projects</span>
             <h3>my latest work</h3>
@@ -201,6 +212,8 @@
             </div>
         </div>
     </section>
+    <!-- Конец пятой секции -->
+    <!-- Начало шестой секции -->
     <div class="reviews" id="reviews">
         <section>
             <div class="heading"><span>client's reviews</span>
@@ -275,6 +288,8 @@
     </div>
     </section>
     </div>
+    <!-- Конец шестой секции -->
+    <!-- Начало седьмой секции -->
     <section class="contact" id="contact">
         <div class="row">
             <div class="form">
@@ -317,6 +332,8 @@
             </div>
         </div>
     </section>
+    <!-- Конец седьмой секции -->
+    <!-- Начало восьмой секции -->
     <section class="blogs" id="blogs">
         <div class="heading"><span>my blogs</span>
             <h3>latest blog news</h3>
@@ -369,6 +386,8 @@
             </div>
         </div>
     </section>
+    <!-- Конец восьмой секции -->
+    <!-- Начало футера -->
     <footer class="footer">
         <section class="flex">
             <div class="share">
@@ -384,6 +403,7 @@
             </div>
         </section>
     </footer>
+    <!-- Конец футера -->
     <script src="script.js"></script>
 </body>
 
